--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*Imago, Henry Jack, 2018. All rights reserved.*/
+
 * { box-sizing: border-box; }
-body { font-family: Arial; max-width: 100%; overflow-x: hidden; min-height: 100%; }
+body { font-family: Roboto, sans-serif;; max-width: 100%; overflow-x: hidden; min-height: 100%; }
 .frm-image { width: 100%; }
 .row { display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; padding: 0 10px; }
 .column { -ms-flex: 33%; flex: 33%; max-width: 33%; padding: 0px 5px 0px 15px; }
@@ -14,7 +15,7 @@ body { font-family: Arial; max-width: 100%; overflow-x: hidden; min-height: 100%
 .tab button:hover { background-color: #55B4B0; cursor: pointer; }
 .tab button.active { background-color: #95DEE3; }
 .tabcontent { display: none; padding: 6px 12px; border-top: none; text-align: center; }
-.tabtitle { font-family: 'Arimo'; font-weight: lighter; }
+.tabtitle { font-family: Arial, sans-serif; }
 
 .navbar, .navbar-default, .navbar-light { position: fixed; width: 100%; background: #fff; background-color: #fff; }
 .navbar-brand { font-family: 'Pacifico'; color: #000;}
