--- a/style.css
+++ b/style.css
@@ -35,9 +35,9 @@ body { font-family: Roboto, sans-serif;; max-width: 100%; overflow-x: hidden; mi
 .bottomnavmargin { margin-bottom: 60px; } .bottomtabsmargin { margin-bottom: 25px; }
 
 #imgx { border-radius: 5px; cursor: pointer; transition: 0.3s; }
-.modal { display: none; position: fixed; z-index: 1; padding-top: 100px; left: 0; top: 0; width: 100%; height: 100%; }
+.modal { display: none; position: fixed; z-index: 1; padding-top: 120px; left: 0; top: 0; width: 100%; height: 100%; }
 .modal { overflow: auto; background-color: rgb(0, 0, 0); background-color: rgba(0, 0, 0, 0.9); }
-.modal-content { margin: auto; display: block; width: auto; height: 84%; border: 1px solid white; }
+.modal-content { margin: auto; display: block; width: auto; max-width: 80%; max-height: 80%; border: 1px solid white; }
 #captionNew, #captionTrend { margin: auto; display: block; width: 80%; text-align: center; color: #ccc; padding: 10px 0; height: 150px; }
 .modal-content, #captionNew, #captionTrend { animation-name: zoom; animation-duration: 0.4s; }
 .closeNew, .closeTrend { position: absolute; top: 80px; right: 40px; color: #706f6f; font-size: 30px; font-weight: bold; }
