--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
 * { box-sizing: border-box; }
 body { font-family: Roboto, sans-serif;; max-width: 100%; overflow-x: hidden; min-height: 100%; }
 .frm-image { width: 100%; }
-.row { display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; padding: 0 10px; }
-.column { -ms-flex: 33%; flex: 33%; max-width: 33%; padding: 0px 5px 0px 15px; }
-.column img { margin-top: 18px; vertical-align: middle; }
+.row { display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; }
+.column { -ms-flex: 33%; flex: 33%; max-width: 33%; padding-left: 1%; }
+.column img { margin-top: 18px; vertical-align: middle; padding-left: 5px; padding-right: 5px; }
 @media screen and (max-width: 800px) { .column { -ms-flex: 50%; flex: 50%; max-width: 50%; } }
 @media screen and (max-width: 600px) { .column { -ms-flex: 100%; flex: 100%; max-width: 100%; }}
 
@@ -33,7 +33,7 @@ body { font-family: Roboto, sans-serif;; max-width: 100%; overflow-x: hidden; mi
 .nav-item { padding-top: 3px; }
 .bottomnavmargin { margin-bottom: 60px; } .bottomtabsmargin { margin-bottom: 25px; }
 
-#imgx { border-radius: 5px; cursor: pointer; transition: 0.3s; }
+#imgx { border-radius: 10px; cursor: pointer; transition: 0.3s; }
 .modal { display: none; position: fixed; z-index: 1; padding-top: 120px; left: 0; top: 0; width: 100%; height: 100%; }
 .modal { overflow: auto; background-color: rgb(0, 0, 0); background-color: rgba(0, 0, 0, 0.9); }
 .modal-content { margin: auto; display: block; width: auto; max-width: 80%; max-height: 80%; border: 1px solid white; }
