iframe fixes, nav breakpoint

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body { font-family: Roboto, sans-serif;; max-width: 100%; overflow-x: hidden; mi
 
 .fas, .nav-link { display: inline-block; }
 .fas { color: #28A745}
-.nav-item { margin: 0px 100px; }
+.nav-item { margin: 0px 70px; }
 .nav-link { color: #4A4A4B !important; } .nav-link:hover { color: #2b5eaf !important; }
 .upload-icon { background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59); -webkit-background-clip: text; -webkit-text-fill-color: transparent;  }
 .user-icon { background: linear-gradient(to right, #4e54c8, #8f94fb); -webkit-background-clip: text; -webkit-text-fill-color: transparent;  } 
@@ -47,7 +47,7 @@ body { font-family: Roboto, sans-serif;; max-width: 100%; overflow-x: hidden; mi
 .ultext:after { content: ''; position: absolute; bottom: 5px; left: 0; width: 0%; border-bottom: 2px solid #2b5eaf; transition: 0.1s; }
 .ultext:hover:after { width: 100%; }
 
-@media (min-width: 1375px){
+@media (min-width: 1200px){
     .navbar-expand-custom { flex-direction: row; flex-wrap: nowrap; justify-content: flex-start; }
     .navbar-expand-custom .navbar-nav { flex-direction: row; }
     .navbar-expand-custom .navbar-nav .nav-link { padding-right: .5rem; padding-left: .5rem; }
@@ -55,3 +55,4 @@ body { font-family: Roboto, sans-serif;; max-width: 100%; overflow-x: hidden; mi
     .navbar-expand-custom .navbar-toggler { display: none; }
 }
 
+.connectiframe { position: absolute; top: 0px; bottom: 0px; width: 100%; height: 100%; }
