--- a/style.css
+++ b/style.css
@@ -55,4 +55,4 @@ body { font-family: Roboto, sans-serif;; max-width: 100%; overflow-x: hidden; mi
     .navbar-expand-custom .navbar-toggler { display: none; }
 }
 
-.connectiframe { position: absolute; top: 0px; bottom: 0px; width: 100%; height: 100%; }
+.connectiframe { position: absolute; width: 100%; height: 100%; }
