--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*Imago, Henry Jack, 2018. All rights reserved.*/
 
 * { box-sizing: border-box; }
-body { font-family: "Roboto", sans-serif !important; max-width: 100%; overflow-x: hidden; min-height: 100%; }
+body { font-family: "Arial", sans-serif !important; max-width: 100%; overflow-x: hidden; min-height: 100%; }
 .frm-image { width: 100%; }
 .row { display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; }
 .column { -ms-flex: 33%; flex: 33%; max-width: 33%; padding-left: 1%; }
@@ -18,7 +18,7 @@ body { font-family: "Roboto", sans-serif !important; max-width: 100%; overflow-x
 .tab button:hover { background-color: #55B4B0; cursor: pointer; }
 .tab button.active { background-color: #95DEE3; }
 .tabcontent { display: none; padding: 6px 12px; border-top: none; text-align: center; }
-.tabtitle { font-family: "Roboto", sans-serif; font-size: 28px; }
+.tabtitle { font-family: "Arial", sans-serif; font-size: 28px; }
 
 .navbar, .navbar-default, .navbar-light { position: fixed; width: 100%; background: #fff; background-color: #fff; z-index: 2; }
 .searchnavbtn:hover { background-color: #fff !important; color: #fff !important; }
