--- a/style.css
+++ b/style.css
@@ -79,3 +79,23 @@ body { font-family: "Arial", sans-serif !important; max-width: 100%; overflow-x:
 .connect-master { background: #ccc; font-family: "Roboto", sans-serif; }
 .connect-master { content: ""; position: fixed; top: 0; left: 0; display: block; background: rgba(204, 204, 204, 0.3); width: 100%; height: 100%; }
 .container-fluid { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); }
+
+@keyframes fadeInUp {
+    from { opacity: 0; transform: translate3d(0, 50%, 0); }
+    to { opacity: 1; transform: translate3d(0, 0, 0); }}
+
+@keyframes fadeInDown {
+    from { opacity: 0; transform: translate3d(0, -50%, 0); }
+    to { opacity: 1; transform: translate3d(0, 0, 0); }}
+
+@keyframes fadeInLeft {
+    from { opacity: 0; transform: translate3d(50%, 0, 0); }
+    to { opacity: 1; transform: translate3d(0, 0, 0); }}
+
+@keyframes jackInTheBox {
+    from { opacity: 0; transform: scale(0.1) rotate(20deg); transform-origin: center bottom; }
+    50% { transform: rotate(-10deg); } 70% { transform: rotate(3deg); }
+    to { opacity: 1; transform: scale(1); }}
+  
+.fadeInUp { animation-name: fadeInUp; animation-duration: 0.75s; } .fadeInDown { animation-name: fadeInDown; animation-duration: 0.75s; } 
+.jackInTheBox { animation-name: jackInTheBox; animation-duration: 1s; }
