--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /*Imago, Henry Jack, 2018. All rights reserved.*/
 
 * { box-sizing: border-box; }
@@ -9,7 +10,7 @@ body { font-family: "Arial", sans-serif !important; max-width: 100%; overflow-x:
 @media screen and (max-width: 800px) { .column { -ms-flex: 50%; flex: 50%; max-width: 50%; } }
 @media screen and (max-width: 600px) { .column { -ms-flex: 100%; flex: 100%; max-width: 100%; }}
 
-.close2 { position: fixed; top: 80px; right: 40px; color: #706f6f; font-size: 30px; font-weight: bold; }
+.close2 { position: absolute; top: 80px; right: 40px; color: #706f6f; font-size: 30px; font-weight: bold; }
 .close2:hover { font-size: 31px; color: #000; }
 
 .tab { overflow: hidden; background-color: #fff; border-radius: 10px; }
@@ -32,6 +33,7 @@ body { font-family: "Arial", sans-serif !important; max-width: 100%; overflow-x:
 .upload-icon { background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59); -webkit-background-clip: text; -webkit-text-fill-color: transparent;  }
 .user-icon { background: linear-gradient(to right, #4e54c8, #8f94fb); -webkit-background-clip: text; -webkit-text-fill-color: transparent;  } 
 .upload-class { border: 1px solid rgba(194, 194, 194, .5); border-radius: 12px; padding: 2px 6px; margin: -2px -6px; max-width: 160px; margin-bottom: 3px; }
+.upload-class:hover { border: 1px solid rgba(66, 134, 244, .5); }
 .nav-item { padding-top: 3px; }
 .bottomnavmargin { margin-bottom: 60px; } .bottomtabsmargin { margin-bottom: 25px; }
 
@@ -48,6 +50,7 @@ body { font-family: "Arial", sans-serif !important; max-width: 100%; overflow-x:
 .ultext { text-decoration: none; position: relative; }
 .ultext:after { content: ''; position: absolute; bottom: 2px; left: 0; width: 0%; border-bottom: 2px solid #2b5eaf; transition: 0.1s; }
 .ultext:hover:after { width: 100%; }
+.typetitle { font-family: "Lato", sans-serif !important; font-weight: bold; }
 
 @media (min-width: 1200px){
     .navbar-expand-custom { flex-direction: row; flex-wrap: nowrap; justify-content: flex-start; }
@@ -57,32 +60,53 @@ body { font-family: "Arial", sans-serif !important; max-width: 100%; overflow-x:
     .navbar-expand-custom .navbar-toggler { display: none; }
 }
 
-.form { position: relative; z-index: 1; background: #FFFFFF; max-width: 350px; margin: 0 auto 100px; padding: 15px; margin-top: 125px; }
+.form { position: relative; z-index: 1; background: #FFFFFF; max-width: 350px; margin: 0 auto; padding: 15px;  }
 .form { border-radius: 10px; text-align: center; }
-.form .thumbnail { background: #EF3B3A; width: 150px; height: 150px; margin: 0 auto 30px; padding: 50px 30px; }
-.form .thumbnail { border-radius: 100%;  box-sizing: border-box; }
-.form .thumbnail img { display: block; width: 100%; }
 .form input { outline: 0; background: #f2f2f2; width: 100%; border: 0; margin: 0 0 15px; }
 .form input  { padding: 15px; border-radius: 3px;  box-sizing: border-box; font-size: 14px; }
-.formconnect .cb { outline: 0; width: 100%; border: 0; padding: 15px; border-radius: 3px; color: #FFFFFF; font-size: 14px; cursor: pointer; transition: all 0.1 ease; }
-.formconnect .cb { background: -webkit-linear-gradient(to right, #56ab2f, #a8e063); background: linear-gradient(to right, #56ab2f, #a8e063); }
+.cb { outline: 0; width: 100%; max-width: 450px; border: 0; padding: 15px; border-radius: 3px; color: #FFFFFF; font-size: 16px; cursor: pointer; transition: all 0.1 ease; }
+.cb { background: -webkit-linear-gradient(to right, #56ab2f, #a8e063); background: linear-gradient(to right, #56ab2f, #a8e063); }
 .form .message { margin: 15px 0 0; color: #b3b3b3; font-size: 14px; }
 .form .message a { color: #56ab2f; text-decoration: underline; font-size: 14px; }
 .form .register-form { display: none; }
-.container { position: relative; z-index: 1; max-width: 300px; margin: 0 auto; }
-.container:before, .container:after { content: ""; display: block; clear: both; }
-.container .info { margin: 10px 20px 20px 20px; text-align: center; }
-.container .info h1 { margin: 0 0 15px; padding: 0; font-size: 36px; font-weight: 300; color: #1a1a1a; }
-.container .info span { color: #4d4d4d; font-size: 12px; }
-.container .info span a { color: #000000; text-decoration: none; }
-.container .info span .fa { color: #EF3B3A; }
-.connect-master { background: #ccc; font-family: "Arial", sans-serif; }
-.connect-master { content: ""; position: fixed; top: 0; left: 0; display: block; background: rgba(204, 204, 204, 0.3); width: 100%; height: 100%; }
-.container-fluid { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); }
+.info { margin: 10px 20px 20px 20px; text-align: center; }
+.info h1 { margin: 0 0 15px; padding: 0; font-size: 36px; font-weight: 300; color: #1a1a1a; }
+.connect-master { margin: 0 auto; padding: 5px; background: #fff; }
+.connect-master { margin-top: 150px; margin-bottom: 50px; height: auto; border-radius: 10px; width: 100%; max-width: 450px; }
+.connectbk { background: rgba(204, 204, 204, 0.3); position: absolute; top: 0; left: 0; min-width: 100%; min-height: 100%; }
 
 .showpass-area { margin-bottom: 12px; font-size: 14px; color: #1e6610; max-width: 200px; display: inline-block; }
 .showpass-area:hover { color: #a80000; }
 .fa-eye { color: #1e6610; } .showpass-area:hover .fa-eye { color: #a80000; }
+
+.uploadbk { background: rgba(204, 204, 204, 0.3); position: absolute; top: 0; left: 0; min-width: 100%; min-height: 100%; }
+.upload-master { height: auto; margin: 0 auto; padding: 25px; background: #fff; }
+.upload-master { margin-top: 150px; margin-bottom: 50px; border-radius: 10px; width: 100%; max-width: 450px; }
+.upload-area { height: auto; margin: 0 auto; border: 2px dashed gray; padding: 15px 5px 5px 5px; }
+#preview img { max-width: 100% !important; height: auto; max-height: 350px; border-radius: 5px; padding: 10px; display: block; margin: 0 auto; }
+.upload-btn { outline: 0; width: 100%; border: 0; padding: 15px; border-radius: 3px; }
+.upload-btn { background: -webkit-linear-gradient(to right, #56ab2f, #a8e063); background: linear-gradient(to right, #56ab2f, #a8e063); }
+.upload-btn { color: #FFFFFF; font-size: 16px; cursor: pointer; display: inline-block; margin: 25px 0px; }
+input[type="file"] { display: none; }
+.custom-file-upload { padding: 10px; border-radius: 3px; color: #fff; cursor: pointer; }
+.custom-file-remove { padding: 10px; border-radius: 3px; color: #fff; cursor: pointer; }
+.custom-file-upload, .custom-file-remove { text-align: center; width: 150px; margin: 10px 10px 10px 10px;  }
+#wrapper { width: auto; text-align: center; margin: 10px 10px 10px 10px; }
+
+.custom-file-upload, .custom-file-remove, .upload-btn, .cb { 
+    -webkit-box-shadow: 0px 0px 6px -3px rgba(0,0,0,0.9); 
+    -moz-box-shadow: 0px 0px 6px -3px rgba(0,0,0,0.9); 
+    box-shadow: 0px 0px 6px -3px rgba(0,0,0,0.9); }
+.custom-file-remove { 
+    background: #e53935;  
+    background: -webkit-linear-gradient(to right, #e35d5b, #e53935);  
+    background: linear-gradient(to right, #e35d5b, #e53935); 
+}    
+.custom-file-upload {
+    background: #457fca;
+    background: -webkit-linear-gradient(to right, #5691c8, #457fca); 
+    background: linear-gradient(to right, #5691c8, #457fca);
+}
 
 @keyframes fadeInUp {
     from { opacity: 0; transform: translate3d(0, 50%, 0); }
