--- a/style.css
+++ b/style.css
@@ -118,17 +118,17 @@ input[type="file"] { display: none; }
   
 .fadeInUp { animation-name: fadeInUp; animation-duration: 0.75s; } .fadeInDown { animation-name: fadeInDown; animation-duration: 0.75s; } 
 
-#tosagree-text { margin-left: 25px; }
-.container-chbox { position: relative; cursor: pointer; -webkit-user-select: none; -moz-user-select: none; }
-.container-chbox { -ms-user-select: none; user-select: none; font-family: 'Roboto'; font-size: 18px; }
-.container-chbox input { opacity: 0; cursor: pointer; } /* Hide the browser's default checkbox */
-.checkmark-chbox { position: absolute; left: 0; height: 20px; width: 20px; background-color: #eee; } 
-.container-chbox:hover input ~ .checkmark-chbox { background-color: #ccc; } /* On mouse-over, add a grey background color */
-.container-chbox input:checked ~ .checkmark-chbox { background-color: #7652c4; } /* When the checkbox is checked, add a blue background */
-.checkmark-chbox:after { content: ""; position: absolute; display: none; } /* Create the checkmark/indicator (hidden when not checked) */
-.container-chbox input:checked ~ .checkmark-chbox:after { display: block; } /* Show the checkmark when checked */
-.container-chbox .checkmark-chbox:after { left: 7px; top: 5px; width: 5px; height: 10px; border: solid white; }
-.container-chbox .checkmark-chbox:after { border-width: 0 3px 3px 0; -webkit-transform: rotate(45deg);  -ms-transform: rotate(45deg); transform: rotate(45deg); }
+#tosagree-text { font-size: 18px; font-family: 'Roboto', sans-serif; }
+.toscontainer { display: block; position: relative; padding-left: 35px; margin-bottom: 12px; }
+.toscontainer { cursor: pointer; font-size: 18px; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
+.toscontainer input { position: absolute; opacity: 0; cursor: pointer; }
+.checkmark { position: absolute; top: 0; left: 0; height: 20px; width: 20px; background-color: #eee; }
+.toscontainer:hover input ~ .checkmark { background-color: #ccc;}
+.toscontainer input:checked ~ .checkmark { background-color: #268214; }
+.checkmark:after { content: ""; position: absolute; display: none; } 
+.toscontainer input:checked ~ .checkmark:after { display: block; }  
+.toscontainer .checkmark:after { left: 7px; top: 4px; width: 5px; height: 10px; border: solid white; border-width: 0 2px 2px 0; }
+.toscontainer .checkmark:after { -webkit-transform: rotate(45deg); -ms-transform: rotate(45deg); transform: rotate(45deg); }
 
 #tos-agreehide { display: none; margin: 25px; margin-top: -10px; }
 #register2, #reg-goback, #loader, #reg-redir { display: none; }
